src/orgs/usa/data-model/objects/EmrServerReferralSourceMetadata__c/EmrServerReferralSourceMetadata__c.object-meta.xml
<CustomObject>
    <label>EMR Server Referral Source Metadata</label>
    <nameField>
        <displayFormat>ESRS-{0000}</displayFormat>
        <label>EMR Server Referral Source Metadata Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EMR Server Referral Sources Metadata</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>