src/orgs/usa/data-model/objects/EmrServerReferralSourceMetadata__c/fields/EmrServer__c.field-meta.xml
<CustomField>
    <fullName>EmrServer__c</fullName>
    <label>EMR Server</label>
    <referenceTo>EmrServer__c</referenceTo>
    <relationshipLabel>EMR Server Referral Sources Metadata</relationshipLabel>
    <relationshipName>EmrServerReferralSourcesMetadata</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>