src/orgs/usa/data-model/objects/EmrServerReferralSourceMetadata__c/fields/ReferralCategory__c.field-meta.xml
<CustomField>
    <fullName>ReferralCategory__c</fullName>
    <label>Referral Category</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>