src/orgs/usa/data-model/objects/EmrServerReferralSourceMetadata__c/fields/ReferralCategoryInternalId__c.field-meta.xml
<CustomField>
    <fullName>ReferralCategoryInternalId__c</fullName>
    <externalId>true</externalId>
    <label>Referral Category Internal Id</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>