src/orgs/usa/data-model/objects/EmrServerReferralSourceMetadata__c/fields/ReferralSourceInternalId__c.field-meta.xml
<CustomField>
    <fullName>ReferralSourceInternalId__c</fullName>
    <externalId>true</externalId>
    <label>Referral Source Internal Id (REF)</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>